libgda-6.0.0
 - MySQL: now supports version 8.0
 - PostgreSQL now support GdaText values, so take care because some SELECT operations
   concatenating strings return GdaText values instead of strings.
 - Lot of memory leaks fixed
 - Added a new module named GdaDB... to simplify DDL operations
 - Added database generation from an XML file (GdaDBCatalog)
 - Updated internal SQLite3 version
 - Added "exxamples" directory as a target to be built (work in progress)
 - Numerous improvements in CI organization.
 - Documentation reorganisation and porting to the new format (in progress)
 - Code modernized for multiple objects
 - Added new API for GdaConnection object
 - Added uniform LOG_DOMAIN usage between translation units
 - Added Uniform debug code generation
 - Eliminated multiple static global variable
 - Improved code quality for libgda to use -Werror
 - Multiple code improvements, formation, and corrections
 - Batch parsing, should remove spacesa and enters before return next statement,
   fix #203
 - Only PostgreSQL, MySQL and SQLite providers are supported
 - Improved Meson options name and behavior
 - Updated translations:
        - sr       Мирослав Николић <miroslavnikolic@rocketmail.com>
        - uk       Yuri Chornoivan <yurchor@ukr.net>
        - ca       Jordi Mas <jmas@softcatala.org>
        - cs       Marek Černocký <marek.cernocky@advantech.com>
        - pt_BR    Rafael Fontenelle <rafaelff@gnome.org>
        - es       Daniel Mustieles <daniel.mustieles@gmail.com>
        - hu       Balázs Úr <balazs@urbalazs.hu>
        - id       Andika Triwidada <atriwidada@gnome.org>
        - sv       Josef Andersson <l10nl18nsweja@gmail.com>

================================================================================

libgda 5.91.0
 - Added support for PostgreSQL version up to 11.0
 - Added new GdaText type for large texts types support
 - Added new GdaHandlerText type for large texts types handler support