@@ -1,6 +1,6 @@
 project('libgda', 'vala', 'c',
         license: 'LGPL2+',
-        version : '6.0.0',
+        version : '6.0.1',
         meson_version: '>= 0.49',
         default_options: [
                         'c_std=gnu11',
