@@ -81,12 +81,7 @@ plugin_get_dsn_spec (void)
 	gchar *ret, *dir;
 
 	dir = gda_gbr_get_file_path (GDA_DATA_DIR, LIBGDA_ABI_NAME, NULL);
-	ret = gda_server_provider_load_file_contents (module_path, dir, "web_specs_dsn.xml");
-	g_free (dir);
-	if (ret)
-		return ret;
-	else
-		return gda_server_provider_load_resource_contents ("web", "web_specs_dsn.raw.xml");
+	return gda_server_provider_load_resource_contents ("web", "web_specs_dsn.raw.xml");
 }
 
 gchar *
@@ -95,12 +90,7 @@ plugin_get_auth_spec (void)
 	gchar *ret, *dir;
 
 	dir = gda_gbr_get_file_path (GDA_DATA_DIR, LIBGDA_ABI_NAME, NULL);
-	ret = gda_server_provider_load_file_contents (module_path, dir, "web_specs_auth.xml");
-	g_free (dir);
-	if (ret)
-		return ret;
-	else
-		return gda_server_provider_load_resource_contents ("web", "web_specs_auth.raw.xml");
+	return gda_server_provider_load_resource_contents ("web", "web_specs_auth.raw.xml");
 }
 
 GdaServerProvider *
